--- a/wallet.html
+++ b/wallet.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
     <head>
     	<meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
 
+        <title>Placeholder</title>
 
         <!-- Required meta tags -->
-        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
@@ -27,14 +27,11 @@
         <div class='container'>
 
             <div style='padding-bottom: 30px;' class='row'>
-            <div class='col-md-3 col-sm-3 col-xs-6'><img style='max-width: 100%;'src="http://placehold.it/400x400"></div>
-            <div class='col-md-3 col-sm-3 col-xs-6'><img style='max-width: 100%;'src="http://placehold.it/400x400"></div>
-            <div class='col-md-6 col-sm-6 col-xs-12'><img style='max-width: 100%;'src="http://placehold.it/840x400"></div>
+            <div class='col-md-3 col-sm-3 col-xs-6'><img style='max-width: 100%;' src="http://placehold.it/400x400" alt="placeholder"></div>
+            <div class='col-md-3 col-sm-3 col-xs-6'><img style='max-width: 100%;' src="http://placehold.it/400x400" alt="placeholder"></div>
+            <div class='col-md-6 col-sm-6 col-xs-12'><img style='max-width: 100%;' src="http://placehold.it/840x400" alt="placeholder"></div>
             </div>
         </div>
-
-    </div> 
-
 
 
     <!-- jQuery -->
