--- a/index.html
+++ b/index.html
@@ -23,20 +23,54 @@
 
 
     <body>
-        <p class="yo">yoi</p>
-        <div class='container'>
 
-            <div style='padding-bottom: 30px;' class='row'>
-            <div class='col-md-3 col-sm-3 col-xs-6'><img style='max-width: 100%;' src="http://placehold.it/400x400" alt="placeholder"></div>
-            <div class='col-md-3 col-sm-3 col-xs-6'><img style='max-width: 100%;' src="http://placehold.it/400x400" alt="placeholder"></div>
-            <div class='col-md-6 col-sm-6 col-xs-12'><img style='max-width: 100%;' src="http://placehold.it/840x400" alt="placeholder"></div>
+        <div class="jumbotron topText" id = "topText">
+            <div class="container text-center col-12">
+              <h1>EXPENSE TRACKER</h1>      
+              <p>Month</p>
             </div>
         </div>
 
+        <!--wallet selection-->
+        <div class="col-10 text-center index-wallet-section"><br>    
+            <h2>Wallets</h2>
+            <div class="row col-12 d-flex-wrap justify-content-center index-wallet-container"><br>
+                  <div class="col-3 index-wall">
+                    <div class="panel">
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <h4 class="panel-footer">Wallet Name</h4>
+                    </div>
+                  </div>
+                  <div class="col-3 index-wall"> 
+                    <div class="panel">
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <h4 class="panel-footer">Wallet Name</h4>
+                    </div>
+                  </div>
+                  <div class="col-3 index-wall"> 
+                    <div class="panel">
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <h4 class="panel-footer">Wallet Name</h4>
+                    </div>
+                  </div>
+                  <div class="col-3 index-wall"> 
+                    <div class="panel">
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <h4 class="panel-footer">Wallet Name</h4>
+                    </div>
+                  </div>
+            </div>
+        </div>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+        <!--information tiles-->
+
+
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
 </html>
+
+
+
