changed dropdown id

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <div class="col-6 CurrVald">
               <div class="col-3 mx-auto justify-content-center dropdown">
-                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Country
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -140,7 +140,7 @@
                   </div>
               </div>
                   <form class="col-11 h-100 mx-auto">
-                      <input class="w-100 h-75" type="text" name="currency-field" id="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+                      <input class="w-100 h-75" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
                   </form>
             </div>
 
@@ -149,7 +149,7 @@
 
             <div class="col-6 CurrVald">
               <div class="col-3 mx-auto justify-content-center dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Country
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -159,7 +159,7 @@
                 </div>
             </div>
                 <form class="h-100 mx-auto">
-                    <input class="col-11 w-100 h-75" type="text" name="currency-field" id="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+                    <input class="col-11 w-100 h-75" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
                 </form>
             </div>
           </div>
