--- a/index.html
+++ b/index.html
@@ -128,41 +128,38 @@
 
         <div class="col-12 d-flex flex-nowrap">
 
-            <div class="col-6 CurrVald">
-              <div class="col-3 mx-auto justify-content-center dropdown">
+              <div class="col-6 CurrVald">
+                <div class="col-3 mx-auto justify-content-center dropdown">
+                    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Country
+                    </button>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">AKN</a>
+                      <a class="dropdown-item" href="#">ABN</a>
+                      <a class="dropdown-item" href="#">ACT</a>
+                    </div>
+                </div>
+                    <form class="col-11 h-100 mx-auto">
+                        <input class="w-100 h-75" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+                    </form>
+              </div>
+
+              <div class="col-6 CurrVald">
+                <div class="col-3 mx-auto justify-content-center dropdown">
                   <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Country
                   </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">AKN</a>
                     <a class="dropdown-item" href="#">ABN</a>
                     <a class="dropdown-item" href="#">ACT</a>
                   </div>
               </div>
-                  <form class="col-11 h-100 mx-auto">
-                      <input class="w-100 h-75" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+                  <form class="h-100 mx-auto">
+                      <input class="col-11 w-100 h-75" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
                   </form>
-            </div>
-
-
-
-
-            <div class="col-6 CurrVald">
-              <div class="col-3 mx-auto justify-content-center dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Country
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">AKN</a>
-                  <a class="dropdown-item" href="#">ABN</a>
-                  <a class="dropdown-item" href="#">ACT</a>
-                </div>
-            </div>
-                <form class="h-100 mx-auto">
-                    <input class="col-11 w-100 h-75" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
-                </form>
-            </div>
-          </div>
+              </div>
+        </div>
 
 
         </div>
