removed extra div

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                   </div>
             </div>
-            <div class="mx-auto plus-button" id="wallet"><p class="mx-auto"></p>+</p></div>
+            <div class="mx-auto plus-button" id="wallet"><p class="mx-auto">+</div>
         </div>
 
         <!--information tiles-->
@@ -188,16 +188,15 @@
 
             <!--cashflow month-->
            <div class="col-12 flowmonth">
-              <div class="jumbotron bg-transparent topText">
-                <div class="text-center">
-                  <h3>Cashflow</h3>    
-                  <p>(month)</p>
-                </div>
-            </div>
+               <div class="jumbotron bg-transparent topText">
+                  <div class="text-center">
+                    <h3>Cashflow</h3>    
+                    <p>(month)</p>
+                  </div>
+              </div>
               <div id="index-flowmonth" style="height:300px"></div>
           </div>
 
-          <div>
             <div class="jumbotron bg-transparent topText">
               <div class="text-center">
                 <h3>Business News</h3>
@@ -208,7 +207,7 @@
           
     </div>
 
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <div id="chart_div"></div>
 
         <!-- jQuery -->
