--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                   </div>
             </div>
-            <div class="mx-auto plus-button" id="wallet"><p class="mx-auto">+</div>
+            <div class="mx-auto plus-button" id="wallet"><p class="mx-auto">+</p></div>
         </div>
 
         <!--information tiles-->
