completed css/flexboxig for index except for line graph

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--wallet selection-->
         <div class="col-md-11 col-12 py-2 text-center index-wallet-section"><br>    
             <h2>Wallets</h2>
-            <div class="row col-12 mx-auto d-flex-wrap index-wallet-container"><br>
+            <div class="row col-12 mx-auto mb-3 d-flex-wrap index-wallet-container"><br>
                   <div class="col-md-3 col-sm-4 col-6 index-wall">
                     <div class="panel">
                       <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
@@ -88,9 +88,10 @@
               </div>
               <div class="d-flex">
                 <div class="col-11 p-0 mx-auto progress">
-                  <div class="progress-bar bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"><span>pofn n</span></div>
-                  <div class="progress-bar bg-success bar" role="progressbar" style="width: 15%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"><span>p nd gn </span></div>
-                  <div class="progress-bar bg-info bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"><span>pfjsnd</span></div>
+                  <div class="progress-bar bar" role="progressbar" style="width: 19%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">pofn </span></div>
+                  <div class="progress-bar bg-success bar" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">p nd gn </span></div>
+                  <div class="progress-bar bg-info bar" role="progressbar" style="width: 22%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">pfjsnd</span></div>
+                  <div class="progress-bar bg-danger bar" role="progressbar" style="width: 30%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">dbfhdb</span></div>
                 </div>
               </div>
             </div>
@@ -195,7 +196,7 @@
                           </div>
                 </div>
 
-                <button type="button" class="btn col-4 col-sm-3 h-100 mt-4 mt-lg-5 btn-default conButt" >Convert</button>
+                <button type="button" class="btn col-4 col-sm-3 h-100 mt-4 mt-lg-5 btn-default conButt"><b>Convert</b></button>
             </div>
 
             <!--cashflow-->
@@ -211,13 +212,31 @@
 
           
             <!---->
-          <div class="col-12 my-5 news">
+          <div class="col-12 news">
             <div class="jumbotron bg-transparent topText">
               <div class="text-center">
                 <h3>Business News</h3>
             </div>
+            </div>
+
+            <button class="col-12 m-0 p-0 border-0 rounded text-left bg-transparent art">
+              <div class="d-flex m-1 m-sm-3 p-2 flex-nowrap">
+                <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a 'sobering reminder' about how</p></div>
+                <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
+              </button>
+            <button class="col-12 m-0 p-0 border-0 rounded text-left bg-transparent art">
+                <div class="d-flex m-1 m-sm-3 p-2 flex-nowrap">
+                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a 'sobering reminder' about how</p></div>
+                  <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
+              </button>
+            <button class="col-12 m-0 p-0 border-0 rounded text-left bg-transparent art">
+                <div class="d-flex m-1 m-sm-3 p-2 flex-nowrap">
+                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a 'sobering reminder' about how</p></div>
+                  <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
+              </button>
+
+            </section>
           </div>
-         </div>
 
     </div>
 
