--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     	<meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
 
-        <title>Placeholder</title>
+        <title>Expenses</title>
+        <link rel="icon" href="images/wallet-icon/029-list.png">
 
         <!-- Required meta tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -219,19 +220,24 @@
             </div>
             </div>
 
-            <button class="col-12 m-0 p-0 border-0 rounded text-left bg-transparent art">
-              <div class="d-flex m-1 m-sm-3 p-2 flex-nowrap">
-                <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a 'sobering reminder' about how</p></div>
+            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+              <div class="d-flex mx-1 p-2 flex-nowrap">
+                <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
               </button>
-            <button class="col-12 m-0 p-0 border-0 rounded text-left bg-transparent art">
-                <div class="d-flex m-1 m-sm-3 p-2 flex-nowrap">
-                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a 'sobering reminder' about how</p></div>
+            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+                <div class="d-flex mx-1 p-2 flex-nowrap">
+                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
                   <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
               </button>
-            <button class="col-12 m-0 p-0 border-0 rounded text-left bg-transparent art">
-                <div class="d-flex m-1 m-sm-3 p-2 flex-nowrap">
-                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a 'sobering reminder' about how</p></div>
+            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+                <div class="d-flex mx-1 p-2 flex-nowrap">
+                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
+                  <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
+              </button>
+            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+                <div class="d-flex mx-1 p-2 flex-nowrap">
+                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
                   <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
               </button>
 
