--- a/index.html
+++ b/index.html
@@ -215,33 +215,25 @@
             <!---->
           <div class="col-12 news">
             <div class="jumbotron bg-transparent topText">
-              <div class="text-center">
-                <h3>Business News</h3>
-            </div>
+              <div class="text-center"><h3>Business News</h3></div>
             </div>
 
-            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
-              <div class="d-flex mx-1 p-2 flex-nowrap">
+            <button class="col-12 d-flex flex-nowrap m-2 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
                 <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-                <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
-              </button>
-            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
-                <div class="d-flex mx-1 p-2 flex-nowrap">
-                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-                  <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
-              </button>
-            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
-                <div class="d-flex mx-1 p-2 flex-nowrap">
-                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-                  <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
-              </button>
-            <button class="col-12 m-0 p-0 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
-                <div class="d-flex mx-1 p-2 flex-nowrap">
-                  <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-                  <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo"></div>
-              </button>
-
-            </section>
+                <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+             </button>
+            <button class="col-12 d-flex flex-nowrap m-2 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+              <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
+              <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+             </button>
+            <button class="col-12 d-flex flex-nowrap m-2 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+              <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
+              <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+             </button>
+            <button class="col-12 d-flex flex-nowrap m-2 px-lg-5 px-sm-3 border-0 rounded text-left bg-transparent art">
+              <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
+              <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+             </button>
           </div>
 
     </div>
