changes p to span

--- a/index.html
+++ b/index.html
@@ -212,28 +212,41 @@
           </div>
 
           
-            <!---->
+            <!--business news-->
           <div class="col-12 news">
             <div class="jumbotron bg-transparent topText">
               <div class="text-center"><h3>Business News</h3></div>
             </div>
 
-            <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
-                <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
+              <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+                <span class="col-9 p-0 headline">
+                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
-             </button>
+            </button>
             <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
-              <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-              <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
-             </button>
+                <span class="col-9 p-0 headline">
+                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                </span>
+                <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+            </button>
             <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
-              <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-              <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
-             </button>
+                <span class="col-9 p-0 headline">
+                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                </span>
+                <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+            </button>
             <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
-              <div class="col-9 p-0 headline"> <p class="col-12 m-0 sou">News Site <b> | </b></p><p class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</p></div>
-              <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
-             </button>
+                <span class="col-9 p-0 headline">
+                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                </span>
+                <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
+            </button>
+
           </div>
 
     </div>
