--- a/index.html
+++ b/index.html
@@ -218,30 +218,30 @@
               <div class="text-center"><h3>Business News</h3></div>
             </div>
 
-              <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+              <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
                   <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-            <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
                   <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-            <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
                   <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-            <button class="col-12 d-flex flex-nowrap my-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 m-0 sou">News Site <b> | </b></span>
+                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
                   <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
@@ -262,6 +262,8 @@
         <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        
+        <!-- Javascript and JSON -->
         <script src="script.js"></script>
 </body>
 </html>
