delete unnecessary files

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="col-10 col-sm-8 p-0 d-flex flex-wrap index-purchaseQtyWallet" style="margin:0 auto">
                 <span class="col-10 ml-4">Purchase Quantity</span>
                 <span class="col-8 p-0">item item </span>
-                <span class="col-4 p-0 text-right value">$$$$</span>
+                <span class="col-4 p-0 text-right value">####</span>
               </div>
             </div>
 
